# SoPlay

./: README.md  Updates.json  build.gradle  settings.gradle  stable.md
app/: CMakeLists.txt  build.gradle  google-services.json
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/color/: button_switch_track.xml  text_input_layout_stroke_color.xml
app/src/main/res/drawable/: bottom_nav_background.xml  bottom_nav_drawable.xml  control_background_40dp.xml  custom_progressbar.xml  ic_baseline_favorite_border_24.xml  ic_clock.xml  ic_cloud_off_black_24dp.xml  ic_date.xml  ic_episode.xml  ic_favorite_black_24.xml  ic_film.xml  ic_github_sponsor.xml  ic_heart_minus.xml  ic_heart_plus.xml  ic_latest_black_24.xml  ic_round_arrow_drop_down_24.xml  ic_round_movie_filter_24.xml  ic_round_star_24.xml  ic_search_black_24.xml  ic_trending_black_24.xml  indicator_bg.xml  input_drawable.xml  item_bg.xml  item_bg_format.xml  item_round.xml  linear_gradient_bg.xml  round_corner.xml  rounded_btn.xml  rounded_btn_bordered.xml  rounded_btn_bordered_red_genre.xml  search_bg.xml  select_latest.xml  shape_gradient.xml  shape_gradient_round_corner.xml  shape_vote_average.xml  toggle_background_on.xml  unselected_indicator_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml  activity_player_tv.xml  actor_view_layout.xml  alert_item.xml  anime_item.xml  banner_item.xml  banner_item_anime.xml  bottom_sheet_custom.xml  bottom_sheet_developers.xml  detail_screen.xml  double_tap_overlay.xml  tv_item.xml  (+23 more)
(+234 files in other folders)
